syntax = "proto3";

package price;

option go_package = "github.com/mike/golden-buy/platform/proto";

// 價格服務
service PriceService {
  // 獲取單個商品當前價格
  rpc GetCurrentPrice(GetPriceRequest) returns (PriceResponse);
  
  // 獲取多個商品當前價格
  rpc GetCurrentPrices(GetPricesRequest) returns (PricesResponse);
  
  // 訂閱價格更新流（Server Streaming）
  rpc SubscribePrices(SubscribeRequest) returns (stream PriceUpdate);
  
  // 獲取 K 線資料
  rpc GetKlines(GetKlinesRequest) returns (KlinesResponse);
}

// === 請求訊息 ===

message GetPriceRequest {
  string symbol = 1; // GOLD, SILVER, PLATINUM, PALLADIUM
}

message GetPricesRequest {
  repeated string symbols = 1; // 批量查詢
}

message SubscribeRequest {
  repeated string symbols = 1; // 訂閱的商品列表，空則訂閱全部
}

message GetKlinesRequest {
  string symbol = 1;
  string interval = 2;  // 1m, 5m, 15m, 1h, 1d
  int64 start_time = 3; // Unix 毫秒
  int64 end_time = 4;   // Unix 毫秒
  int32 limit = 5;      // 限制數量，預設 100，最大 1000
}

// === 響應訊息 ===

message PriceResponse {
  string symbol = 1;
  double price = 2;
  int64 timestamp = 3;      // Unix 毫秒
  double change = 4;         // 變化量
  double change_percent = 5; // 變化百分比
}

message PricesResponse {
  repeated PriceResponse prices = 1;
}

message PriceUpdate {
  string symbol = 1;
  double price = 2;
  int64 timestamp = 3;
  double change = 4;
  double change_percent = 5;
}

message Kline {
  int64 timestamp = 1; // K 線開始時間
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  double volume = 6;
}

message KlinesResponse {
  string symbol = 1;
  string interval = 2;
  repeated Kline klines = 3;
  int32 total = 4; // 總數
}

